Fix the media query for better responsive on mobile screens

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -101,4 +101,8 @@ select {
     flex-direction: column;
     gap: 30px;
   }
+
+  .quizAnswer {
+    width: fit-content;
+  }
 }
